Ejercicios finalizados sin appConfig